2010-05-10  Kevin B. Kenny  <kennykb@acm.org>

	* aclocal.m4:	Synchronized with 'tdbc'.
	* configure.in: Advanced version to 1.0b15. Advanced TEA to 3.7.
	* library/tdbcsqlite3.tcl:
			Advanced version to 1.0b15.
	* README:	Advanced version to 1.0b15.
	* tclconfig/:	Advanced TEA to 3.7.
	* configure:	autoconf-2.59
	
2009-10-26  Kevin B. Kenny  <kennykb@acm.org>

	* README:			Advanced version number to 1.0b14.
	* configure.in:
	* library/tdbcsqlite3.tcl:
	* configure:			autoconf 2.59

	* tests/tdbcsqlite3.test:	Added test cases (known bugs) for
					duplicate column names in results.
	* doc/tdbcsqlite3.n:		Added a BUGS section documenting the
					known problem with duplicate column
					names.
	
2009-09-29  Kevin B. Kenny  <kennykb@acm.org>

	* README:			Advanced version number to 1.0b13
	* configure.in:
	* library/tdbcsqlite3.tcl:
	* configure:			autoconf-2.59

	
2009-07-03  Kevin B. Kenny  <kennykb@acm.org>

	* tempTest.tcl (removed):	Deleted obsolete test harness;
					this package has used proper tcltest
					testing for months.
	
	* README:			Advanced version number to 1.0b12
	* configure.in:
	* library/tdbcsqlite3.tcl:
	* configure:			autoconf-2.59
	
2009-05-29  Kevin B. Kenny  <kennykb@acm.org>

	* README:			Advanced version number to 1.0b11
	* configure.in:
	* library/tdbcsqlite3.tcl:
	* configure:			autoconf-2.59
	
2009-04-19  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_sqlite3.n: Added missing documentation for 'new' 
	                      constructors.
	
2009-04-18  Kevin B. Kenny  <kennykb@acm.org>

	* tests/tdbcsqlite3.test: Changed the 'invalid path name' to a
	                          path name that is more likely actually
	                          to be invalid. Changed the tests for
	                          inappropriate access to an array variable
	                          not to expect failure.
	* doc/tdbc_sqlite3.n: Made changes so that NROFF formatting matches
	                      the Tcl standard.
	